guestbook-app/redis-replica.yaml
# redis replica configuration file. Deploy in gss-wcp namespace
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: redis-replica
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: replica
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: replica
        tier: backend
    spec:
      containers:
      - name: replica
        image: gcr.io/google_samples/gb-redisslave:v3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
# services for redis replica
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  labels:
    app: redis
    role: replica
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: replica
    tier: backend
